--- a/admin/package.json
+++ b/admin/package.json
@@ -12,13 +12,14 @@
     "@types/react": "^18.2.20",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.2.7",
-    "axios": "^1.4.0",
+    "axios": "^1.8.4",
     "next": "^15.3.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "recharts": "^2.15.2",
     "typescript": "^4.9.5"
   },
   "scripts": {
