--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
-    "@nestjs/swagger": "^11.1.1"
+    "@nestjs/swagger": "^11.1.1",
+    "dotenv": "^16.5.0"
+  },
+  "devDependencies": {
+    "@types/node": "^22.14.1"
   }
 }
